2008-04-22  Juri Linkov  <juri@jurta.org>

	* mailcap.el (mailcap-file-default-commands): New function.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-signature-separator, message-cite-function):
	Change custom version.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-decode.el (mm-display-external): Make temp file read-only.

2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-diary.el (gnus-article-edit-mode-map, message-mode-map): Remove
	binding for `gnus-diary-version'.  Bind `gnus-diary-check-message' to
	`C-c C-f d'.

2008-04-12  Adrian Aichner  <adrian@xemacs.org>

	* gnus-sum.el (gnus-summary-goto-subject): Typo fix.

2008-04-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Added docs.
	(auth-sources): Modified format to support server.
	(auth-source-pick, auth-source-user-or-password)
	(auth-source-user-or-password-imap)
	(auth-source-user-or-password-pop3, auth-source-user-or-password-ssh)
	(auth-source-user-or-password-sftp)
	(auth-source-user-or-password-smtp): Add server parameter.

2008-04-08  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el: Initialize the registry when gnus-registry-install
	is t.

2008-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface): Make buffer unibyte.

2008-04-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail-source.el (mail-source-value):
	Prefer fboundp to functionp so it works with macros as well.

2008-04-05  Glenn Morris  <rgm@gnu.org>

	* gnus-ems.el (mm-disable-multibyte): Autoload it.

2008-04-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-with-unibyte-buffer, mm-with-multibyte-buffer):
	Prefer mm-(en|dis)able-multibyte to default-enable-multibyte-characters.

	* nnheader.el (nnheader-init-server-buffer): Change buffer's
	multibyteness after rather than before erasing it.

	* gnus-art.el (gnus-mime-replace-part): Remove unnecessary use of
	mm-with-multibyte.